migdb.qvto/transforms/tests/errors/error_addPrimitiveClass1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_addProperty1b(out inoutModel : ERR);

main(){
	_errorLog(OrderedSet{_evolutionError(1, "Structure contains entity called char", "evolution_app.qvto")});
}